--- a/Harbinger/project.properties
+++ b/Harbinger/project.properties
@@ -12,4 +12,6 @@
 
 # Project target.
 target=android-15
-android.library.reference.1=../../../../../../AndEngine-GLES2
+android.library.reference.3=../../../../../../workspace/AndEnginePhysicsBox2DExtension
+android.library.reference.1=../../../../../../workspace/AndEngine
+android.library.reference.2=../../../../../../workspace/AndEngineMultiplayerExtension
